# nomad-p2p-cni

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod
.github/workflows/: build.yml  test.yml
agent/: Cargo.toml
agent/src/: api.rs  bpf.rs  ipsec.rs  kademlia.rs  lib.rs  main.rs  metrics.rs  protocol.rs  relay.rs  reload.rs  route.rs  seed.rs  stun.rs  vip.rs
bpf/: firewall.bpf.c  mesh.bpf.c  vip_balancer.bpf.c
cmd/agent/: agent.go  auth.go  ipsec.go  main.go  stun.go
cmd/cni/: cni.go
cmd/nomad-p2p/: agent.go  bpf.go  cni.go  consul.go  firewall.go  geneve.go  ipsec.go  main.go  metrics.go  protocol.go  reload.go  seed.go  stun.go  vip.go
cmd/seed/: main.go  seed.go
cni/: Cargo.toml
cni/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
config/: config.example.json  config.go
ebpf/: Cargo.toml
ebpf/src/: main.rs
internal/netutil/: netutil.go
test/cni/: nomad-p2p.conflist
test/docker/: Dockerfile  entrypoint.sh  run-tests.sh  test-e2e.sh  test-multi-node.sh  test-ping.sh
test/nomad/: agent.json  client.hcl  e2e-cni.hcl
xtask/: Cargo.toml
xtask/src/: main.rs
