[package]
name = "nomad-p2p-agent"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
tokio = { workspace = true }
futures = "0.3"
aya = { workspace = true }
aya-log = { workspace = true }
libp2p = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
nomad-p2p-common = { path = "../common" }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[lib]
name = "nomad_p2p_agent"
path = "src/lib.rs"

[[bin]]
name = "nomad-p2p-agent"
path = "src/main.rs"