[package]
name = "nomad-p2p-ebpf"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
nomad-p2p-common = { path = "../common" }

[lib]
name = "nomad_p2p_ebpf"
path = "src/main.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"